kubernetes/apps/tailscale/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-system
  labels:
    # needs to make route tables
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
