kubernetes/apps/tailscale/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale
  namespace: tailscale-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
